--- a/estoque_sangue/templates/graficos.html
+++ b/estoque_sangue/templates/graficos.html
@@ -10,7 +10,7 @@
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Custom CSS -->
@@ -21,7 +21,7 @@
 
     <style>
         body {
-            font-family: 'Montserrat','Roboto', sans-serif;
+            font-family: 'Montserrat', 'Roboto', sans-serif;
             background-color: #FFFFFF;
             color: #495057;
             padding: 20px;
@@ -214,32 +214,32 @@
                     <div class="col text-center">
                         <div class="menu-item">
                             <a href="{% url 'estoque' %}">
-                                <i class="fas fa-tint fa-3x mb-3" style="color: rgba(255, 24, 24, 1)"></i> <!-- fas fa-box-open fa-3x mb-3 -->
-                                <h4 style="color: rgba(255, 24, 24, 1)">Estoque</h4>
+                                <i class="fas fa-tint fa-3x mb-3"></i> <!-- fas fa-box-open fa-3x mb-3 -->
+                                <h4>Estoque</h4>
                             </a>
                         </div>
                     </div>
                     <div class="col text-center">
                         <div class="menu-item">
                             <a href="{% url 'tabela' %}">
-                                <i class="fas fa-clipboard-list fa-3x mb-3" style="color: rgba(255, 24, 24, 1)"></i>
-                                <h4 style="color: rgba(255, 24, 24, 1)">Registros</h4>
+                                <i class="fas fa-clipboard-list fa-3x mb-3"></i>
+                                <h4>Registros</h4>
                             </a>
                         </div>
                     </div>
                     <div class="col text-center">
                         <div class="menu-item">
                             <a href="{% url 'graficos' %}">
-                                <i class="fas fa-chart-bar fa-3x mb-3" style="color: rgba(255, 24, 24, 1)"></i>
-                                <h4 style="color: rgba(255, 24, 24, 1)">Gráficos</h4>
+                                <i class="fas fa-chart-bar fa-3x mb-3"></i>
+                                <h4>Gráficos</h4>
                             </a>
                         </div>
                     </div>
                     <div class="col text-center">
                         <div class="menu-item">
                             <a href="{% url 'mapa' %}">
-                                <i class="fas fa-map-marker-alt fa-3x mb-3" style="color: rgba(255, 24, 24, 1)"></i>
-                                <h4 style="color: rgba(255, 24, 24, 1)">Mapa</h4>
+                                <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
+                                <h4>Mapa</h4>
                             </a>
                         </div>
                     </div>
@@ -260,8 +260,24 @@
                     <option value="MARILIA">MARILIA</option>
                     <option value="BOTUCATU">BOTUCATU</option>
                 </select>
+                <p>
+            </div>
+            <label for="data">Selecione um intervalo de datas:</label>
+            <div class="row">
+                <div class="col">
+                    <input type="date" id="dataInicio" class="form-control">
+                </div>
+                <div class="col">
+                    <input type="date" id="dataFim" class="form-control">
+                </div>
+            </div>
+
+            <div class="chart-container">
+                <!-- Gráfico de linha -->
+                <canvas id="myLineChart"></canvas>
             </div>
             <div class="chart-container">
+                <!-- Gráfico de barras -->
                 <canvas id="myChart"></canvas>
             </div>
         </div>
@@ -269,28 +285,83 @@
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
-            // Função para gerar números aleatórios dentro de um intervalo específico
             function randomNumber(min, max) {
                 return Math.floor(Math.random() * (max - min + 1) + min);
             }
 
-            // Atualizar o gráfico quando o hemocentro for alterado
             document.getElementById('hemocentro').addEventListener('change', function () {
                 var hemocentro = this.value;
-                // Gerar dados aleatórios para o estoque atual e mínimo
-                var novoEstoqueAtual = [];
-                var novoEstoqueMinimo = [];
-                for (var i = 0; i < 8; i++) {
-                    novoEstoqueAtual.push(randomNumber(1, 50));
-                    novoEstoqueMinimo.push(randomNumber(1, 20));
+                var dataInicio = document.getElementById('dataInicio').value;
+                var dataFim = document.getElementById('dataFim').value;
+                var dataInicioObj = new Date(dataInicio);
+                var dataFimObj = new Date(dataFim);
+                var intervaloDias = (dataFimObj - dataInicioObj) / (1000 * 60 * 60 * 24);
+                if (intervaloDias > 31) {
+                    alert('Por favor, selecione um intervalo menor do que 31 dias.');
+                    return;
                 }
-                // Atualizar o gráfico com os novos dados aleatórios
-                myChart.data.datasets[0].data = novoEstoqueAtual;
-                myChart.data.datasets[1].data = novoEstoqueMinimo;
+                var dadosEstoqueAtual = [];
+                var dadosEstoqueMinimo = [];
+                for (var i = 0; i < 8; i++) {
+                    dadosEstoqueAtual.push(randomNumber(1, 20));
+                    dadosEstoqueMinimo.push(randomNumber(1, 20));
+                }
+
+                myChart.data.datasets[0].data = dadosEstoqueAtual;
+                myChart.data.datasets[1].data = dadosEstoqueMinimo;
                 myChart.update();
+
+
+                var dadosColetaDoDia = [];
+                var dadosBolsaUtilizada = []; // Adicionando um array para os dados da linha "Bolsa Utilizada no Dia"
+                for (var i = 0; i < intervaloDias; i++) {
+                    dadosColetaDoDia.push(randomNumber(5, 50));
+                    dadosBolsaUtilizada.push(randomNumber(1, 20)); // Gerando dados para "Bolsa Utilizada no Dia"
+                }
+                myLineChart.data.labels = calcularLabels(dataInicioObj, intervaloDias);
+                myLineChart.data.datasets[0].data = dadosColetaDoDia;
+                myLineChart.data.datasets[1].data = dadosBolsaUtilizada; // Atribuindo os dados gerados para a linha "Bolsa Utilizada no Dia"
+                myLineChart.update();
             });
 
-            // Dados iniciais do gráfico (apenas um exemplo, substitua pelos seus dados reais)
+            function calcularLabels(dataInicio, intervaloDias) {
+                var labels = [];
+                for (var i = 0; i < intervaloDias; i++) {
+                    var data = new Date(dataInicio);
+                    data.setDate(dataInicio.getDate() + i);
+                    labels.push(data.toLocaleDateString());
+                }
+                return labels;
+            }
+
+            var ctxLine = document.getElementById('myLineChart').getContext('2d');
+            var myLineChart = new Chart(ctxLine, {
+                type: 'line',
+                data: {
+                    labels: [], // Vazio para ser preenchido dinamicamente
+                    datasets: [{
+                        label: 'Bolsa Coletada',
+                        data: [],
+                        backgroundColor: 'rgba(0, 99, 0, 0.2)',
+                        borderColor: 'rgba(00, 80, 00, 1)',
+                        borderWidth: 1
+                    }, {
+                        label: 'Bolsa Utilizada',
+                        data: [],
+                        backgroundColor: 'rgba(255, 162, 235, 0.2)',
+                        borderColor: 'rgba(255, 24, 24, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+
             var ctx = document.getElementById('myChart').getContext('2d');
             var myChart = new Chart(ctx, {
                 type: 'bar',
@@ -299,13 +370,13 @@
                     datasets: [{
                         label: 'Estoque Atual',
                         data: [12, 19, 3, 5, 2, 3, 7, 8],
-                        backgroundColor: 'rgba(00, 80, 00, 1)',
+                        backgroundColor: 'rgba(0, 99, 0, 0.2)',
                         borderColor: 'rgba(00, 80, 00, 1)',
                         borderWidth: 1
                     }, {
                         label: 'Estoque Mínimo',
                         data: [7, 11, 5, 8, 3, 6, 4, 9],
-                        backgroundColor: 'rgba(255, 24, 24, 1)',
+                        backgroundColor: 'rgba(255, 162, 235, 0.2)',
                         borderColor: 'rgba(255, 24, 24, 1)',
                         borderWidth: 1
                     }]
@@ -322,7 +393,7 @@
 
         <section id="govsp-rodape">
             <div class="container">
-            <!--
+                <!--
                 <div class="linha-botoes">
                     <div class="coluna-4">
                         <a href="https://www.ouvidoria.sp.gov.br/Portal/Default.aspx"
@@ -339,15 +410,15 @@
                 </div>
             </div> -->
 
-            <div class="container rodape">
-                <div class="logo-rodape">
-                    <a href="https://www.saopaulo.sp.gov.br/">
-                        <img src="https://www.saopaulo.sp.gov.br/barra-govsp/img/logo-rodape-governo-do-estado-sp.png"
-                            alt="site do Governo de São Paulo" width="206" height="38">
-                    </a>
-                </div>
+                <div class="container rodape">
+                    <div class="logo-rodape">
+                        <a href="https://www.saopaulo.sp.gov.br/">
+                            <img src="https://www.saopaulo.sp.gov.br/barra-govsp/img/logo-rodape-governo-do-estado-sp.png"
+                                alt="site do Governo de São Paulo" width="206" height="38">
+                        </a>
+                    </div>
 
-            </div>
+                </div>
         </section>
 </body>
 
