--- a/estoque_sangue/templates/mapa.html
+++ b/estoque_sangue/templates/mapa.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css"
         href="https://saopaulo.sp.gov.br/barra-govsp/css/top-padrao-govsp-v2.min.css?vs=3.0">
@@ -23,7 +23,7 @@
         }
 
         body {
-            font-family: 'Montserrat','Roboto', sans-serif;
+            font-family: 'Montserrat', 'Roboto', sans-serif;
             background-color: #FFFFFF;
             color: #495057;
             padding: 20px;
@@ -212,6 +212,13 @@
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
+
+                // Coordenadas do sudoeste e nordeste de São Paulo para definir o foco apenas no estado
+        var bounds = [
+            [-25.583, -53.109], // Sudoeste de São Paulo
+            [-19.766, -44.196]  // Nordeste de São Paulo
+        ];
+        
             // Função para gerar números aleatórios dentro de um intervalo específico
             function randomNumber(min, max) {
                 return Math.floor(Math.random() * (max - min + 1) + min);
@@ -251,14 +258,23 @@
                     var estoqueMinimo = randomNumber(1, 20); // Gerar estoque mínimo aleatório
                     popupContent += '<tr><td>' + tiposSanguineos[i] + '</td><td>' + estoqueAtual + '</td><td>' + estoqueMinimo + '</td></tr>';
                 }
-                popupContent += '</tbody></table>';
-                marker.bindPopup(popupContent);
-            });
+            popupContent += '</tbody></table>';
+            marker.bindPopup(popupContent);
+            // Definir a cor do marcador com base no estoque mínimo
+            if (hemocentro.estoqueMinimo === 5) {
+                marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
+            } else if (hemocentro.estoqueMinimo === 15) {
+                marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-yellow.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
+            } else if (hemocentro.estoqueMinimo === 25) {
+                marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
+            }
+        });
+            
         </script>
 
         <section id="govsp-rodape">
             <div class="container">
-            <!--
+                <!--
                 <div class="linha-botoes">
                     <div class="coluna-4">
                         <a href="https://www.ouvidoria.sp.gov.br/Portal/Default.aspx"
@@ -275,15 +291,15 @@
                 </div>
             </div> -->
 
-            <div class="container rodape">
-                <div class="logo-rodape">
-                    <a href="https://www.saopaulo.sp.gov.br/">
-                        <img src="https://www.saopaulo.sp.gov.br/barra-govsp/img/logo-rodape-governo-do-estado-sp.png"
-                            alt="site do Governo de São Paulo" width="206" height="38">
-                    </a>
-                </div>
+                <div class="container rodape">
+                    <div class="logo-rodape">
+                        <a href="https://www.saopaulo.sp.gov.br/">
+                            <img src="https://www.saopaulo.sp.gov.br/barra-govsp/img/logo-rodape-governo-do-estado-sp.png"
+                                alt="site do Governo de São Paulo" width="206" height="38">
+                        </a>
+                    </div>
 
-            </div>
+                </div>
         </section>
 </body>
 
