--- a/estoque_sangue/templates/tabela.html
+++ b/estoque_sangue/templates/tabela.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <!-- DataTables CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.css" />
     <!-- Custom CSS -->
@@ -164,7 +164,7 @@
                 Seu navegador não tem suporte a JavaScript ou está desativado!</noscript>
         </section>
         <p>
-        <div class="container">
+       <div class="container">
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
@@ -216,7 +216,54 @@
                     <option value="MARILIA">MARILIA</option>
                     <option value="BOTUCATU">BOTUCATU</option>
                 </select>
+                <label for="data">Selecione uma data:</label>
+                <input type="date" id="data" class="form-control">
             </div>
+
+            <!-- Card com contagem total da coleta do dia -->
+            <div class="container mt-3">
+                <div class="row">
+                    <!-- Card com fundo verde -->
+                    <div class="col-md-6">
+                        <div class="card text-center bg-success text-white">
+                            <div class="card-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <h5 class="card-title mb-0"><i></i> Bolsas Coletadas
+                                        </h5>
+                                        <p class="card-text fs-3" id="total-coleta">0</p>
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-truck-droplet fa-4x text-white"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fim do primeiro card -->
+
+                    <!-- Card com fundo vermelho -->
+                    <div class="col-md-6">
+                        <div class="card text-center bg-danger text-white">
+                            <div class="card-body">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <h5 class="card-title mb-0"><i></i> Bolsas Utilizadas
+                                        </h5>
+                                        <p class="card-text fs-3" id="total-utilizadas">0</p>
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-truck-droplet fa-4x text-white"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fim do segundo card -->
+                </div>
+            </div>
+
+
             <div class="container">
                 <div class="table-container">
                     <table id="all-records-table" class="table table-striped table-bordered">
@@ -226,6 +273,8 @@
                                 <th>Tipo Sanguíneo</th>
                                 <th>Quantidade Atual</th>
                                 <th>Quantidade Mínima</th>
+                                <th>Data</th>
+
                             </tr>
                         </thead>
                         <tbody>
@@ -242,26 +291,49 @@
             <!-- DataTables JS -->
             <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.5/datatables.min.js"></script>
             <script>
-                // Função para gerar números aleatórios dentro de um intervalo específico
-                function randomNumber(min, max) {
-                    return Math.floor(Math.random() * (max - min + 1) + min);
-                }
-
                 // Função para preencher a tabela com dados aleatórios
-                function fillTable(hemocentro) {
+                function fillTable(hemocentro, dataSelecionada) {
                     var tiposSanguineos = ['A+', 'A-', 'B+', 'B-', 'AB+', 'AB-', 'O+', 'O-'];
                     var tableBody = $('#all-records-table tbody');
                     tableBody.empty(); // Limpar a tabela antes de preencher com novos dados
 
+                    var totalColetadas = 0;
+                    var totalUtilizadas = 0;
+
                     tiposSanguineos.forEach(function (tipoSanguineo) {
+                        var bolsasColetadas = randomNumber(1, 50);
+                        var bolsasUtilizadas = randomNumber(0, bolsasColetadas); // Não pode ser maior que as coletadas
+                        totalColetadas += bolsasColetadas;
+                        totalUtilizadas += bolsasUtilizadas;
+
                         var newRow = '<tr>' +
                             '<td>' + hemocentro + '</td>' +
                             '<td>' + tipoSanguineo + '</td>' +
+
                             '<td>' + randomNumber(1, 50) + '</td>' + // Quantidade Atual (gerada aleatoriamente)
                             '<td>' + randomNumber(1, 20) + '</td>' + // Quantidade Mínima (gerada aleatoriamente)
+                            '<td>' + formatDate(dataSelecionada) + '</td>' + // Data formatada
                             '</tr>';
+
                         tableBody.append(newRow);
                     });
+
+                    // Atualizar o total da coleta do dia
+                    var totalColeta = tiposSanguineos.length * 100; // Exemplo de cálculo do total
+                    $('#total-coleta').text(totalColetadas);
+                    $('#total-utilizadas').text(totalUtilizadas);
+                }
+
+                // Função para formatar a data no formato dd/mm/aaaa
+                function formatDate(dateString) {
+                    var dateParts = dateString.split('-');
+                    var formattedDate = dateParts[2] + '/' + dateParts[1] + '/' + dateParts[0].slice(-2);
+                    return formattedDate;
+                }
+
+                // Função para gerar números aleatórios dentro de um intervalo específico
+                function randomNumber(min, max) {
+                    return Math.floor(Math.random() * (max - min + 1) + min);
                 }
 
                 $(document).ready(function () {
@@ -272,22 +344,12 @@
                         }
                     });
 
-                    // Preencher a tabela com todos os registros ao carregar a página
-                    fillTableForAllHemocentros();
-
-                    // Preencher a tabela ao selecionar um hemocentro
-                    $('#hemocentro').change(function () {
-                        var hemocentro = $(this).val();
-                        fillTable(hemocentro);
+                    // Preencher a tabela ao selecionar um hemocentro e uma data
+                    $('#hemocentro, #data').change(function () {
+                        var hemocentro = $('#hemocentro').val();
+                        var dataSelecionada = $('#data').val();
+                        fillTable(hemocentro, dataSelecionada);
                     });
-
-                    // Função para preencher a tabela com dados aleatórios de todos os hemocentros
-                    function fillTableForAllHemocentros() {
-                        var hemocentros = ["FUNDAÇÃO PRÓ-SANGUE", "UNIFESP", "SANTA CASA", "COLSAN", "UNICAMP", "RIBEIRÃO PRETO", "SÃO JOSÉ DO RIO PRETO", "MARILIA", "BOTUCATU"];
-                        hemocentros.forEach(function (hemocentro) {
-                            fillTable(hemocentro);
-                        });
-                    }
                 });
             </script>
         </div>
