--- a/estoque_sangue/templates/tabela.html
+++ b/estoque_sangue/templates/tabela.html
@@ -19,7 +19,7 @@
 
     <style>
         body {
-            font-family: 'Montserrat','Roboto', sans-serif;
+            font-family: 'Montserrat', 'Roboto', sans-serif;
             background-color: #FFFFFF;
             color: #495057;
             padding: 20px;
@@ -66,8 +66,8 @@
                                     alt="logomarca Governo de São Paulo" height="38" class="logo">
                             </a>
                         </div>
-                    </div> 
-                    
+                    </div>
+
                     <nav class="govsp-navbar govsp-navbar-expand-lg">
                         <a class="govsp-social" href="http://bit.ly/govspnozap"><img class="govsp-icon-social"
                                 src="https://saopaulo.sp.gov.br/barra-govsp/img/i-whatsapp.png"
@@ -164,7 +164,7 @@
                 Seu navegador não tem suporte a JavaScript ou está desativado!</noscript>
         </section>
         <p>
-       <div class="container">
+        <div class="container">
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
@@ -271,8 +271,8 @@
                             <tr>
                                 <th>Hemocentro</th>
                                 <th>Tipo Sanguíneo</th>
-                                <th>Quantidade Atual</th>
-                                <th>Quantidade Mínima</th>
+                                <th>Estoque Atual</th>
+                                <th>Estoque Mínimo</th>
                                 <th>Data</th>
 
                             </tr>
@@ -356,7 +356,7 @@
 
         <section id="govsp-rodape">
             <div class="container">
-            <!--
+                <!--
                 <div class="linha-botoes">
                     <div class="coluna-4">
                         <a href="https://www.ouvidoria.sp.gov.br/Portal/Default.aspx"
@@ -373,15 +373,15 @@
                 </div>
             </div> -->
 
-            <div class="container rodape">
-                <div class="logo-rodape">
-                    <a href="https://www.saopaulo.sp.gov.br/">
-                        <img src="https://www.saopaulo.sp.gov.br/barra-govsp/img/logo-rodape-governo-do-estado-sp.png"
-                            alt="site do Governo de São Paulo" width="206" height="38">
-                    </a>
-                </div>
+                <div class="container rodape">
+                    <div class="logo-rodape">
+                        <a href="https://www.saopaulo.sp.gov.br/">
+                            <img src="https://www.saopaulo.sp.gov.br/barra-govsp/img/logo-rodape-governo-do-estado-sp.png"
+                                alt="site do Governo de São Paulo" width="206" height="38">
+                        </a>
+                    </div>
 
-            </div>
+                </div>
         </section>
 </body>
 
