--- a/estoque_sangue/templates/mapa.html
+++ b/estoque_sangue/templates/mapa.html
@@ -213,12 +213,12 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
 
-                // Coordenadas do sudoeste e nordeste de São Paulo para definir o foco apenas no estado
-        var bounds = [
-            [-25.583, -53.109], // Sudoeste de São Paulo
-            [-19.766, -44.196]  // Nordeste de São Paulo
-        ];
-        
+            // Coordenadas do sudoeste e nordeste de São Paulo para definir o foco apenas no estado
+            var bounds = [
+                [-25.583, -53.109], // Sudoeste de São Paulo
+                [-19.766, -44.196]  // Nordeste de São Paulo
+            ];
+
             // Função para gerar números aleatórios dentro de um intervalo específico
             function randomNumber(min, max) {
                 return Math.floor(Math.random() * (max - min + 1) + min);
@@ -253,23 +253,42 @@
                 var popupContent = '<b>' + hemocentro.nome + '</b><br>';
                 popupContent += '<table class="table"><thead><tr><th>Tipo Sanguíneo</th><th>Estoque Atual</th><th>Estoque Mínimo</th></tr></thead><tbody>';
                 var tiposSanguineos = ['A+', 'A-', 'B+', 'B-', 'AB+', 'AB-', 'O+', 'O-'];
+                var estoqueMinimoAbaixo5 = false;
+                var estoqueMinimoAbaixo15 = false;
+                var estoqueMinimoAbaixo25 = false;
                 for (var i = 0; i < tiposSanguineos.length; i++) {
-                    var estoqueAtual = randomNumber(1, 50); // Gerar estoque atual aleatório
-                    var estoqueMinimo = randomNumber(1, 20); // Gerar estoque mínimo aleatório
+                    var estoqueAtual = randomNumber(1, 60); // Gerar estoque atual aleatório
+                    var estoqueMinimo = randomNumber(1, 35); // Gerar estoque mínimo aleatório
                     popupContent += '<tr><td>' + tiposSanguineos[i] + '</td><td>' + estoqueAtual + '</td><td>' + estoqueMinimo + '</td></tr>';
+                    // Verificar se o estoque mínimo está abaixo ou igual a 5, 15 ou 25
+                    if (estoqueMinimo <= 5) {
+                        estoqueMinimoAbaixo5 = true;
+                    }
+                    if (estoqueMinimo <= 10) {
+                        estoqueMinimoAbaixo15 = true;
+                    }
+                    if (estoqueMinimo <= 20) {
+                        estoqueMinimoAbaixo25 = true;
+                    }
                 }
-            popupContent += '</tbody></table>';
-            marker.bindPopup(popupContent);
-            // Definir a cor do marcador com base no estoque mínimo
-            if (hemocentro.estoqueMinimo === 5) {
-                marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
-            } else if (hemocentro.estoqueMinimo === 15) {
-                marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-yellow.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
-            } else if (hemocentro.estoqueMinimo === 25) {
-                marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
+                popupContent += '</tbody></table>';
+                marker.bindPopup(popupContent);
+                // Definir a cor do marcador com base no estoque mínimo
+                if (estoqueMinimoAbaixo5) {
+                    marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
+                } else if (estoqueMinimoAbaixo15) {
+                    marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-yellow.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
+                } else if (estoqueMinimoAbaixo25) {
+                    marker.setIcon(L.icon({ iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/images/marker-shadow.png' }));
+                }
+            });
+
+            // Função para gerar números aleatórios dentro de um intervalo específico
+            function randomNumber(min, max) {
+                return Math.floor(Math.random() * (max - min + 1) + min);
             }
-        });
-            
+        </script>
+
         </script>
 
         <section id="govsp-rodape">
